// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatView > Snapshots > should match snapshot for empty conversation 1`] = `<div />`;

exports[`ChatView > Snapshots > should match snapshot with messages 1`] = `
<div>
  <div
    class="flex flex-col h-full min-h-0 relative"
  >
    <header
      class="@container relative aurora-horizon h-14 px-4 flex items-center border-b border-fluux-bg shadow-sm gap-2 md:gap-3"
    >
      <div
        data-testid="avatar"
      >
        Alice Smith
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h2
          class="font-semibold text-fluux-text truncate leading-tight"
        >
          Alice Smith
        </h2>
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs text-fluux-muted truncate"
          >
            Online
          </p>
        </div>
      </div>
      <div
        class="flex items-center gap-1 md:gap-3"
      >
        <div>
          <div
            class="relative"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="contacts.actionsMenu"
              class="p-1.5 rounded hover:bg-fluux-hover text-fluux-muted hover:text-fluux-text transition-colors tap-target"
              type="button"
            >
              <span
                data-testid="icon-more-vertical"
              >
                More
              </span>
            </button>
          </div>
        </div>
      </div>
    </header>
    <div
      class="focus-zone flex-1 flex flex-col min-h-0 p-1 relative"
      tabindex="0"
    >
      <div
        class="relative flex-1 flex flex-col min-h-0"
      >
        <div
          class="flex-1 overflow-y-auto overflow-x-hidden px-4 pt-4 pb-0 overscroll-contain"
          data-message-list="true"
          style="overflow-anchor: auto;"
        >
          <div>
            <div
              class="flex justify-center py-3"
            >
              <button
                class="flex items-center gap-1 px-3 py-1.5 text-xs rounded-full transition-colors text-fluux-muted hover:text-fluux-text hover:bg-fluux-hover"
                type="button"
              >
                <span
                  data-testid="icon-chevron-up"
                >
                  Up
                </span>
                chat.loadEarlierMessages
              </button>
            </div>
            <div>
              <div
                data-date-separator="10:00"
              >
                <div
                  class="flex items-center gap-3 pt-6 pb-2"
                >
                  <div
                    class="flex-1 h-px bg-fluux-hover"
                  />
                  <span
                    class="text-xs font-semibold text-fluux-muted whitespace-nowrap"
                  >
                    Today
                  </span>
                  <div
                    class="flex-1 h-px bg-fluux-hover"
                  />
                </div>
              </div>
              <div
                class="message-row"
                data-message-id="msg-1"
                data-message-row-id="msg-1"
              >
                <div
                  class="group flex gap-4  -mx-4 px-4 py-0.5 message-group-start message-group-end"
                  data-message-body="Hello there!"
                  data-message-from="Alice Smith"
                  data-message-id="msg-1"
                  data-message-time="14:30"
                >
                  <div
                    class="w-10 flex-shrink-0 flex flex-col"
                  >
                    <div
                      class="select-none cursor-pointer"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        data-testid="avatar"
                      >
                        Alice Smith
                      </div>
                    </div>
                  </div>
                  <div
                    class="relative flex-1 min-w-0"
                  >
                    <div
                      class="absolute -top-14 -end-2 p-4 z-20 select-none pointer-events-none transition-none opacity-0 translate-x-2"
                      data-message-toolbar="true"
                    >
                      <div
                        class="flex items-center p-0.5 fluux-popover rounded-md "
                      >
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 leading-none transition-colors text-base hover:bg-fluux-hover "
                          type="button"
                        >
                          👍
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 leading-none transition-colors text-base hover:bg-fluux-hover "
                          type="button"
                        >
                          ❤️
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 leading-none transition-colors text-base hover:bg-fluux-hover "
                          type="button"
                        >
                          😂
                        </button>
                        <div
                          class="w-px h-5 bg-fluux-hover"
                        />
                        <div
                          class="relative"
                        >
                          <button
                            aria-label="chat.moreReactions"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                            type="button"
                          >
                            <span
                              data-testid="icon-emoji"
                            >
                              Emoji
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.reply"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                            type="button"
                          >
                            <span
                              data-testid="icon-reply"
                            >
                              Reply
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.forwardMessage"
                            class="p-1.5 transition-colors opacity-50 cursor-not-allowed hover:bg-fluux-hover"
                            disabled=""
                            type="button"
                          >
                            <span
                              data-testid="icon-forward"
                            >
                              Forward
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex relative"
                        >
                          <div
                            class="inline-flex"
                          >
                            <button
                              aria-label="chat.moreOptions"
                              class="p-1.5 transition-colors hover:bg-fluux-hover opacity-50 cursor-not-allowed"
                              disabled=""
                              type="button"
                            >
                              <span
                                data-testid="icon-more"
                              >
                                More
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="relative w-full min-w-0 touch:select-none touch:[-webkit-touch-callout:none]  "
                      data-msg-chrome="header"
                    >
                      <div
                        class="flex items-baseline gap-2 pb-1 flex-wrap"
                      >
                        <div
                          class="cursor-pointer "
                          role="button"
                          tabindex="0"
                        >
                          <span
                            class="font-medium"
                            style="color: rgb(161, 197, 235);"
                          >
                            Alice Smith
                          </span>
                        </div>
                        <span
                          class="text-xs text-fluux-muted"
                        >
                          14:30
                        </span>
                      </div>
                      <div
                        class=""
                      >
                        <div
                          class="text-fluux-text break-words whitespace-pre-wrap leading-[1.375]"
                          data-msg-text="true"
                          dir="auto"
                        >
                          Hello there!
                        </div>
                        <div
                          data-testid="message-attachments"
                        >
                          Attachments
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="message-row"
                data-message-id="msg-2"
                data-message-row-id="msg-2"
              >
                <div
                  class="group flex gap-4  -mx-4 px-4 py-0.5 message-group-start message-group-end"
                  data-message-body="Hi! How are you?"
                  data-message-from="Me"
                  data-message-id="msg-2"
                  data-message-time="14:30"
                >
                  <div
                    class="w-10 flex-shrink-0 flex flex-col"
                  >
                    <div
                      class="select-none cursor-pointer"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        data-testid="avatar"
                      >
                        Me
                      </div>
                    </div>
                  </div>
                  <div
                    class="relative flex-1 min-w-0"
                  >
                    <div
                      class="absolute -top-14 -end-2 p-4 z-20 select-none pointer-events-none transition-none opacity-0 translate-x-2"
                      data-message-toolbar="true"
                    >
                      <div
                        class="flex items-center p-0.5 fluux-popover rounded-md "
                      >
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 leading-none transition-colors text-base hover:bg-fluux-hover "
                          type="button"
                        >
                          👍
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 leading-none transition-colors text-base hover:bg-fluux-hover "
                          type="button"
                        >
                          ❤️
                        </button>
                        <button
                          aria-label="chat.reactWith"
                          class="px-2 py-1.5 leading-none transition-colors text-base hover:bg-fluux-hover "
                          type="button"
                        >
                          😂
                        </button>
                        <div
                          class="w-px h-5 bg-fluux-hover"
                        />
                        <div
                          class="relative"
                        >
                          <button
                            aria-label="chat.moreReactions"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                            type="button"
                          >
                            <span
                              data-testid="icon-emoji"
                            >
                              Emoji
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.editMessage"
                            class="p-1.5 transition-colors hover:bg-fluux-hover"
                            type="button"
                          >
                            <span
                              data-testid="icon-edit"
                            >
                              Edit
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex"
                        >
                          <button
                            aria-label="chat.forwardMessage"
                            class="p-1.5 transition-colors opacity-50 cursor-not-allowed hover:bg-fluux-hover"
                            disabled=""
                            type="button"
                          >
                            <span
                              data-testid="icon-forward"
                            >
                              Forward
                            </span>
                          </button>
                        </div>
                        <div
                          class="inline-flex relative"
                        >
                          <div
                            class="inline-flex"
                          >
                            <button
                              aria-label="chat.moreOptions"
                              class="p-1.5 transition-colors hover:bg-fluux-hover "
                              type="button"
                            >
                              <span
                                data-testid="icon-more"
                              >
                                More
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="relative w-fit max-w-full min-w-0 touch:select-none touch:[-webkit-touch-callout:none]  message-own-tint message-own-tint-start message-own-tint-end"
                      data-msg-chrome="header"
                      data-msg-own=""
                    >
                      <div
                        class="flex items-baseline gap-2 pb-1 flex-wrap"
                      >
                        <div
                          class="cursor-pointer "
                          role="button"
                          tabindex="0"
                        >
                          <span
                            class="font-medium"
                            style="color: var(--fluux-text-self);"
                          >
                            Me
                          </span>
                        </div>
                        <span
                          class="text-xs text-fluux-muted"
                        >
                          14:30
                        </span>
                      </div>
                      <div
                        class=""
                      >
                        <div
                          class="text-fluux-text break-words whitespace-pre-wrap leading-[1.375]"
                          data-msg-text="true"
                          dir="auto"
                        >
                          Hi! How are you?
                        </div>
                        <div
                          data-testid="message-attachments"
                        >
                          Attachments
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pb-2"
            />
          </div>
        </div>
        <div
          class="absolute bottom-4 end-4 z-40 opacity-0 pointer-events-none"
          inert=""
        >
          <div
            class="inline-flex"
          >
            <button
              aria-label="chat.scrollToBottom"
              class="size-10 rounded-full bg-fluux-float border border-fluux-border shadow-lg flex items-center justify-center text-fluux-muted hover:text-fluux-text hover:bg-fluux-float-hover transition-colors duration-200 hover:scale-105 active:scale-95"
              data-fab="scroll-to-bottom"
              tabindex="-1"
              type="button"
            >
              <span
                data-testid="icon-chevron-down"
              >
                Down
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="message-composer"
    >
      <textarea
        data-testid="message-input"
        placeholder="chat.messageTo"
      />
      <button
        data-testid="send-button"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`ChatView > Snapshots > should match snapshot with typing indicator 1`] = `
<div>
  <div
    class="flex flex-col h-full min-h-0 relative"
  >
    <header
      class="@container relative aurora-horizon h-14 px-4 flex items-center border-b border-fluux-bg shadow-sm gap-2 md:gap-3"
    >
      <div
        data-testid="avatar"
      >
        Alice Smith
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <h2
          class="font-semibold text-fluux-text truncate leading-tight"
        >
          Alice Smith
        </h2>
        <div
          class="flex items-center gap-1.5"
        >
          <p
            class="text-xs text-fluux-muted truncate"
          >
            Online
          </p>
        </div>
      </div>
      <div
        class="flex items-center gap-1 md:gap-3"
      >
        <div>
          <div
            class="relative"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="contacts.actionsMenu"
              class="p-1.5 rounded hover:bg-fluux-hover text-fluux-muted hover:text-fluux-text transition-colors tap-target"
              type="button"
            >
              <span
                data-testid="icon-more-vertical"
              >
                More
              </span>
            </button>
          </div>
        </div>
      </div>
    </header>
    <div
      class="focus-zone flex-1 flex flex-col min-h-0 p-1 relative"
      tabindex="0"
    >
      <div
        class="relative flex-1 flex flex-col min-h-0"
      >
        <div
          class="flex-1 overflow-y-auto overflow-x-hidden px-4 pt-4 pb-0 overscroll-contain"
          data-message-list="true"
          style="overflow-anchor: auto;"
        >
          <div
            class="flex-1 flex flex-col items-center justify-center text-fluux-muted h-full gap-3"
          >
            <div
              class="size-16 rounded-full bg-fluux-brand/10 border border-fluux-brand/25 flex items-center justify-center"
            >
              <span
                data-testid="icon-message-circle"
              >
                MessageCircle
              </span>
            </div>
            <p
              class="text-sm"
            >
              chat.noMessages
            </p>
          </div>
        </div>
        <div
          class="shrink-0 px-4 pt-2 pb-0.5 pointer-events-none"
        >
          <div
            class="inline-block max-w-[calc(100%-4rem)] rounded-full bg-fluux-float border border-fluux-border shadow-lg px-3 py-1.5 animate-toast-in"
            data-typing-pill="true"
          >
            <div
              class="text-xs text-fluux-muted italic flex items-center gap-1.5 min-w-0 "
            >
              <span
                aria-hidden="true"
                class="flex gap-0.5 flex-shrink-0"
              >
                <span
                  class="size-1.5 rounded-full typing-dot"
                />
                <span
                  class="size-1.5 rounded-full typing-dot"
                />
                <span
                  class="size-1.5 rounded-full typing-dot"
                />
              </span>
              <span
                class="line-clamp-2 break-words"
                dir="auto"
              >
                Alice Smith is typing...
              </span>
            </div>
          </div>
        </div>
        <div
          class="absolute bottom-4 end-4 z-40 opacity-0 pointer-events-none"
          inert=""
        >
          <div
            class="inline-flex"
          >
            <button
              aria-label="chat.scrollToBottom"
              class="size-10 rounded-full bg-fluux-float border border-fluux-border shadow-lg flex items-center justify-center text-fluux-muted hover:text-fluux-text hover:bg-fluux-float-hover transition-colors duration-200 hover:scale-105 active:scale-95"
              data-fab="scroll-to-bottom"
              tabindex="-1"
              type="button"
            >
              <span
                data-testid="icon-chevron-down"
              >
                Down
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="message-composer"
    >
      <textarea
        data-testid="message-input"
        placeholder="chat.messageTo"
      />
      <button
        data-testid="send-button"
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;
